<resources>
    <!-- App Meta -->
    <string name="app_name">ApneaTimer</string>

    <!-- Timer -->
    <string name="in_time">Time</string>
    <string name="in_series">Series</string>
    <string name="remaining_series">Remaining series</string>
    <string name="default_remaining_time">00:00</string>
    <string name="default_time">00</string>
    <string name="default_series">1</string>
    <string name="number_series">Series Number</string>
    <string name="apnea_time">Apnea Time</string>
    <string name="breath_time">Breath Time</string>
</resources>
