<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dip"
    style="@style/AppTheme">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="15dip"
            android:gravity="center"
            android:text="@string/number_series" />

        <TextView
            android:padding="15dip"
            android:gravity="center"
            android:text="@string/apnea_time" />

        <TextView
            android:padding="15dip"
            android:gravity="center"
            android:text="@string/breath_time" />
    </TableRow>

</TableLayout>
